apps/libreddit/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: libreddit-route
  namespace: libreddit
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "reddit.hoytlabs.app"
spec:
  parentRefs:
    - name: gateway-external
      namespace: gateway
      sectionName: https
  hostnames:
    - "reddit.hoytlabs.app"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: libreddit
          port: 8080
